<resources>
    <!-- Strings related to Main title -->
    <string name="app_name">Motivz</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Boutique</string>
    <string name="title_stats">Suivi</string>
    <string name="title_goal">Mes Objectifs</string>
    <string name="profil">Profil</string>

    <!-- Strings related to shop -->
    <string name="title_item">Objets</string>
    <string name="title_avatar">Avatar</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>

    <!-- Strings related to login -->
    <string name="bienvenue">Bienvenue !</string>
    <string name="log_in">Se connecter</string>
    <string name="sign_in">Créer un compte</string>
    <string name="pseudo">Entrez un pseudonyme :</string>
    <string name="email">Entrez un email :</string>
    <string name="password">Entrez un mot de passe :</string>
    <string name="emailLI">Entrez votre email :</string>
    <string name="passwordLI">Entrez votre mot de passe :</string>
    <string name="validate">Valider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to goal display-->
    <string name="goal_title">Mes Objectifs</string>
    <!-- Strings related to goal creation-->
    <string name="titleCG">Créer un objectif</string>
    <string name="nameCG">Nom de l\'objectif :</string>
    <string name="goalTypeCG">Type d\'objectif :</string>
    <string name="valueCG">Valeur visée :</string>
    <string-array name="goal_type_list">
        <item>Pas</item>
        <item>Distance parcourue (en km)</item>
        <item>Pompes</item>
        <item>Squats</item>
        <item>Abdos</item>
    </string-array>
    <string name="save">Enregistrer</string>

</resources>