<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connexion.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:id="@+id/bienvenueSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/bienvenue"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="30dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pseudoSI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/pseudo"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/enterPseudoSI"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="superMarie5" />

                <TextView
                    android:id="@+id/emailSI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/email"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/enterEmailSI"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="example@gmail.com"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/passwordSI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/password"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/enterPasswordSI"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="mot de passe"
                    android:inputType="textPassword" />
                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="@color/medium_blue"
                    android:text="@string/validate" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>